# image-benchmark

./: pyproject.toml
drawimage/: bench_simple.py
